src/objects/Accounting_Invoice__c.object
<CustomObject>
    <description>For Commcare Integration</description>
    <label>Accounting</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Accounting #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>accounting_billingaccount_account_type__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.account_type__c, 
Accounting_Billing_Account__r.account_type__c)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_created_by_dom__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.created_by_domain__c, 
Accounting_Billing_Account__r.created_by_domain__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>billingaccount_created_by_domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_created_by__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.created_by__c, 
Accounting_Billing_Account__r.created_by__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>billingaccount_created_by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_date_confirmed__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.date_confirmed_extra_charges__c, 
Accounting_Billing_Account__r.date_confirmed_extra_charges__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>billingAcc_date_confirmed_extra_charges</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_date_created__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.date_created__c, 
Accounting_Billing_Account__r.date_created__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_dimagi_contact__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.dimagi_contact__c, 
Accounting_Billing_Account__r.dimagi_contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimagi Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_entry_point__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.entry_point__c, 
Accounting_Billing_Account__r.entry_point__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Point</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_id__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.id__c, 
Accounting_Billing_Account__r.id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>billingaccount_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_is_active__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.is_active__c, 
Accounting_Billing_Account__r.is_active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_is_auto_invoic__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.is_auto_invoiceable__c, 
Accounting_Billing_Account__r.is_auto_invoiceable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>billingaccount_is_auto_invoiceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_name__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.Name, 
Accounting_Billing_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingaccount_salesforce_acc__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.salesforce_account_id__c, 
Accounting_Billing_Account__r.salesforce_account_id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account SF Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingacLastPaymentMeth__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.last_payment_method__c, 
Accounting_Billing_Account__r.last_payment_method__c)</formula>
        <label>Last payment method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_billingacPreOrPostPay__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.pre_or_post_pay__c, 
Accounting_Billing_Account__r.pre_or_post_pay__c)</formula>
        <label>Prepay or postpay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Address_Line_1__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.first_line__c, 
Accounting_Billing_Account__r.BillingContact__r.first_line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Address_Line_2__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.second_line__c, 
Accounting_Billing_Account__r.BillingContact__r.second_line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_City__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.city__c, 
Accounting_Billing_Account__r.BillingContact__r.city__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Company_Name__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.company_name__c, 
Accounting_Billing_Account__r.BillingContact__r.company_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Country__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.country__c, 
Accounting_Billing_Account__r.BillingContact__r.country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Emails__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.emails__c, 
Accounting_Billing_Account__r.BillingContact__r.emails__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_First_Name__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.first_name__c, 
Accounting_Billing_Account__r.BillingContact__r.first_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Last_Name__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;,
    Accounting_Subscription__r.account__r.BillingContact__r.last_name__c,
    Accounting_Billing_Account__r.BillingContact__r.last_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Phone_Number__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.phone_number__c, 
Accounting_Billing_Account__r.BillingContact__r.phone_number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_Postal_Code__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.postal_code__c, 
Accounting_Billing_Account__r.BillingContact__r.postal_code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_BillingContact_State__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.account__r.BillingContact__r.state_province_region__c, 
Accounting_Billing_Account__r.BillingContact__r.state_province_region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for Customer Invoice type. Fetched from Customer Invoice API</description>
        <inlineHelpText>Billing Account for Customer Invoice type</inlineHelpText>
        <label>Accounting Billing Account</label>
        <referenceTo>Accounting_BillingAccount__c</referenceTo>
        <relationshipLabel>Accounting</relationshipLabel>
        <relationshipName>Accounting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Customer_PlanVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Invoice highest software plan version.</description>
        <inlineHelpText>Customer Invoice highest software plan version.</inlineHelpText>
        <label>Accounting_Customer_PlanVersion</label>
        <referenceTo>Accounting_SoftwarePlanVersion__c</referenceTo>
        <relationshipLabel>Accounting</relationshipLabel>
        <relationshipName>Accounting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplanversion_date_crea__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.date_created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>softwareplanversion_date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplanversion_DtLstVer__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.Date_of_Last_Version_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplanversion_id__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>softwareplanversion_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplanversion_is_active__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.is_active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_description__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_edition__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.edition__c, 
Accounting_Customer_PlanVersion__r.Accounting_SoftwarePlan__r.edition__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_id__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>softwareplan_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_name__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_softwareplan_visibility__c</fullName>
        <formula>Accounting_Subscription__r.plan_version__r.Accounting_SoftwarePlan__r.visibility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_software_monthly_fee__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.plan_version__r.Software_Product_Rate__r.monthly_fee__c, 
Customer_Invoice_Monthly_fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>accounting_subscriber_domain__c</fullName>
        <formula>IF(Text(Invoice_Type__c) = &apos;Subscription&apos;, 
Accounting_Subscription__r.Accounting_Subscriber__r.domain__c,
Project_Space__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscriber_id__c</fullName>
        <formula>Accounting_Subscription__r.Accounting_Subscriber__r.id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscriber_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscriber_organization__c</fullName>
        <formula>Accounting_Subscription__r.Accounting_Subscriber__r.organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscriber_organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscriptionFundingSource__c</fullName>
        <formula>Accounting_Subscription__r.funding_source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_auto_generate_cr__c</fullName>
        <formula>Accounting_Subscription__r.auto_generate_credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_auto_generate_credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_date_created__c</fullName>
        <formula>Accounting_Subscription__r.date_created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_date_delay_invoi__c</fullName>
        <formula>Accounting_Subscription__r.date_delay_invoicing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_date_delay_invoicing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_date_end__c</fullName>
        <formula>Accounting_Subscription__r.date_end__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_date_start__c</fullName>
        <formula>Accounting_Subscription__r.date_start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_do_not_invoice__c</fullName>
        <formula>Accounting_Subscription__r.do_not_invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_id__c</fullName>
        <formula>Accounting_Subscription__r.id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_is_active__c</fullName>
        <formula>Accounting_Subscription__r.is_active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_is_trial__c</fullName>
        <formula>Accounting_Subscription__r.is_trial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_is_trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_pro_bono_status__c</fullName>
        <formula>Accounting_Subscription__r.pro_bono_status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro-Bono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_salesforce_contr__c</fullName>
        <formula>Accounting_Subscription__r.salesforce_contract_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription SF Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounting_subscription_service_type__c</fullName>
        <formula>Accounting_Subscription__r.service_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Subscription</label>
        <referenceTo>Accounting_Subscription__c</referenceTo>
        <relationshipName>Accounting_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Project_Space__c</fullName>
        <description>Billing Account - Project Space name</description>
        <formula>accounting_billingaccount_name__c &amp;&quot; (&quot;&amp; accounting_subscriber_domain__c&amp;&quot;)&quot;</formula>
        <label>Account (Project Space)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>balance__c</fullName>
        <label>Amount Due</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>calculated_MRR__c</fullName>
        <description>Calculated MRR based in plan cost in invoice, normalized over length of time active that month. Excludes subscriptions that end this month.</description>
        <formula>IF( AND(MONTH(accounting_subscription_date_end__c) = MONTH(date_end__c),YEAR(accounting_subscription_date_end__c) = YEAR(date_end__c)), 0, 
IF(AND(MONTH(accounting_subscription_date_start__c)= MONTH(date_end__c),YEAR(accounting_subscription_date_start__c)= YEAR(date_end__c)), (Plan_Cost__c  / (date_end__c - accounting_subscription_date_start__c +1)) * 30, Plan_Cost__c))</formula>
        <label>calculated MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>BLANKVALUE(Accounting_Subscription__r.Created_By__c, &quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Monthly_fee__c</fullName>
        <description>Field calculated during HQ sync, base of software customer software plans monthly fee.</description>
        <inlineHelpText>Field calculated during HQ sync, base of software customer software plans monthly fee.</inlineHelpText>
        <label>Customer Invoice Monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>invoice_date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_end__c</fullName>
        <label>Invoice End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_paid__c</fullName>
        <label>invoice_date_paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_received__c</fullName>
        <label>invoice_date_received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_start__c</fullName>
        <label>Invoice Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>Number of days the invoice is overdue</description>
        <formula>TODAY() - (date_due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days the invoice is overdue</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_internal_prop_self_started__c</fullName>
        <formula>Project_Space__r.InternalProp_self_started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain internal prop self started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_is_inside_sales__c</fullName>
        <formula>Project_Space__r.Is_Inside_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain is inside sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Accounting (Domain)</relationshipLabel>
        <relationshipName>Accounting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Invoice1__c</fullName>
        <formula>If(is_hidden__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>invoice_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_End_Date_Month__c</fullName>
        <description>The month of the invoice end date. Mainly used for reporting purposes.</description>
        <formula>CASE(MONTH( date_end__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <label>Invoice End Date - Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_End_Date_Year__c</fullName>
        <formula>TEXT(YEAR( date_end__c ))</formula>
        <label>Invoice End Date - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                    <default>true</default>
                    <label>Subscription</label>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <formula>&quot;0&quot; &amp; id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_hidden_to_ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>invoice_is_hidden_to_ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>invoice_is_hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Account__c</fullName>
        <formula>Domain__r.Account__r.Is_Key_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Key Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_This_Month__c</fullName>
        <formula>MONTH(DATEVALUE(accounting_billingaccount_date_created__c)) == MONTH(DATEVALUE(date_created__c) ) &amp;&amp;
YEAR(DATEVALUE(accounting_billingaccount_date_created__c)) == YEAR(DATEVALUE(date_created__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ops_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by ops to remove certain invoices that we do not think should be counted toward the Product revenue (at least not yet). For most of these, we are not yet confident they are real paying customers, and they haven&apos;t been responsive to payment requests. We aren&apos;t sure yet so don&apos;t want to permanently update yet in HQ. (e.g. this was created for the World Vision projects)</description>
        <inlineHelpText>This field is used by ops to remove certain invoices that we do not think should be counted toward the Product revenue (at least not yet). We are not yet confident they are real paying customers, and they haven&apos;t been responsive to payment requests.</inlineHelpText>
        <label>Ops Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>IF (ISBLANK(date_paid__c ), IF ( Write_Off__c == true, &quot;Write Off&quot;, &quot;Not Paid&quot;), &quot;Paid&quot;)</description>
        <formula>IF (ISBLANK(date_paid__c ), IF ( Write_Off__c == true, &quot;Write Off&quot;, &quot;Not Paid&quot;), &quot;Paid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF (ISBLANK(date_paid__c ), IF ( Write_Off__c == true, &quot;Write Off&quot;, &quot;Not Paid&quot;), &quot;Paid&quot;)</inlineHelpText>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Cost__c</fullName>
        <label>Plan Cost</label>
        <summarizedField>Accounting_LineItems__c.subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plan_Credits__c</fullName>
        <label>Plan Credits</label>
        <summarizedField>Accounting_LineItems__c.applied_credit__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Space Link</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Accounting</relationshipLabel>
        <relationshipName>Accounting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Plan_Cost__c  +  SMS_cost__c  +  User_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                    <label>CommCareHQ</label>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Account__c</fullName>
        <description>Associated SF Account Name</description>
        <formula>Domain__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Associated SF Account Name</inlineHelpText>
        <label>SF Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_cost__c</fullName>
        <label>SMS cost</label>
        <summarizedField>Accounting_LineItems__c.subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMS_credits__c</fullName>
        <label>SMS credits</label>
        <summarizedField>Accounting_LineItems__c.applied_credit__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Softwareplan_Edition__c</fullName>
        <label>Softwareplan Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Plan_Version__c</fullName>
        <label>Software Plan Versions</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>subscription_skip_auto_downgrade__c</fullName>
        <formula>Accounting_Subscription__r.skip_auto_downgrade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>subscription_skip_auto_downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tax_rate__c</fullName>
        <label>invoice_tax_rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Credits__c</fullName>
        <label>Total Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_cost__c</fullName>
        <label>User cost</label>
        <summarizedField>Accounting_LineItems__c.subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Accounting_LineItems__c.Feature_Type1__c</field>
            <operation>equals</operation>
            <value>User</value>
        </summaryFilterItems>
        <summaryForeignKey>Accounting_LineItems__c.invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>